﻿[B]1.0.0~beta2[/B]

- Added a custom title window (and an option to enable or disable it), and a custom promo window (to create Revolve fanart).
- Replaced the Revolve icon, and added Revolve fanart.
- Improved the icons of many dialogs.
- Fixed some bugs.

[B]1.0.0~beta1[/B]

- Improved the information about Revolve in addon.xml.
- Made some small interface improvements (longer text in Revolve-view, moved clock when RSS is enabled in Home Menu, and more).
- Added and changed some background images.
- Fixed some bugs.

[B]0.5.0[/B]

- Fixed some bugs.

[B]0.4.1[/B]

- Fixed some bugs.

[B]0.4.0[/B]

- Added and improved skin settings (related to the circle items of the Home Menu), added a textfile viewer.
- Improved FileManager en MyMusicPlaylistEditor-windows (added scrollbars, fixed item count-label).
- Fixed some bugs.

[B]0.3.4[/B]

- Added three more custom options in the Home Menu among the pre-existing options Videos, Music, and Pictures.
- Added help-texts to all custom option-related dialogs.
- Added and replaced some artwork, mostly icons (media-flagging) and images for the Home Menu circle.
- Added 'reset to default'-buttons to all the Revolve skin settings-windows.
- Fixed some bugs.

[B]0.3.3[/B]

- Added submenus including a submenu editor as part of the custom options editor.
- Increased number of custom options in the Home Menu from 10 to 20, added an option to always open Videos and Music in the root.
- Fixed some bugs.

[B]0.3.2[/B]

- Changed the artwork within the circle of the Home Menu (replaced the turntable and the television).
- Redesigned Custom Option-related windows and changed skin variables involved with these custom options.
- Fixed some bugs.

[B]0.3.1[/B]

- Improved the items in Home Menu circle (Album-items and Next Aired-information is added, source can be configured, list is increased from 5 to 10 items).
- Changed the artwork within the circle of the Home Menu (changed the television, added a turntable and a book).