@@ -103,6 +103,8 @@
 	<string id="31204">Always open in root folder</string>
 	<string id="31205">Make this Home Menu option always open in the root folder. Some Home Menu options remember the last opened library or folder. These options reopen the view in this library or folder, and not in the root folder. You can bypass this behaviour with this setting. Activating this setting will always open the library in the root folder.</string>
 	<string id="31206">Show or hide the Revolve title screen on start-up.</string>
+	<string id="31207">Choose the busy animation for the progress bars.</string>
+	<string id="31208">Select a busy animation:</string>
 	
 	<!-- Messages -->
 	<string id="31300">No information available.</string>
@@ -193,6 +195,7 @@
 	<string id="31785">Enable the exit menu in the circle of the Home Menu. This exit menu gives you fast access to all the exit options. If this menu is enabled, you can access it by pressing 'left' on the Exit-option in the Home Menu.</string>
 	<string id="31786">Next Aired information available</string>
 	<string id="31787">Enable the 'Next Aired' information in the circle of the Home Menu. If this option is enabled, you can access it by pressing 'left' on the Live TV-option in the Home Menu.</string>
+	<string id="31788">Busy Animation Editor</string>
     
 	<string id="31800">Custom Option Editor</string>
 	<string id="31801">Custom Action Editor</string>
@@ -330,4 +333,7 @@
 	<string id="31937">Gallery list</string>
 	<string id="31938">Rotate list</string>
 	<string id="31939">Banners list</string>
+    
+	<string id="31951">Arrows</string>
+	<string id="31952">Circles</string>
 </strings>
