@@ -1,4 +1,8 @@
-﻿[B]1.0.0~beta2[/B]
+﻿[B]1.0.0~beta3[/B]
+
+- Added and changed the busy animation, made a skin setting to select one of two animations.
+
+[B]1.0.0~beta2[/B]
 
 - Added a custom title window (and an option to enable or disable it), and a custom promo window (to create Revolve fanart).
 - Replaced the Revolve icon, and added Revolve fanart.
